--- a/CSharp/App/Modules/Tree/BehaviorTreeView.xaml
+++ b/CSharp/App/Modules/Tree/BehaviorTreeView.xaml
@@ -23,9 +23,9 @@
 
 	<UserControl.ContextMenu>
 		<ContextMenu>
-			<MenuItem Header="New" Command="ApplicationCommands.New"
+			<MenuItem Header="新建" Command="ApplicationCommands.New"
 					CommandTarget="{Binding Path=PlacementTarget, RelativeSource={RelativeSource AncestorType=ContextMenu}}" />
-			<MenuItem Header="Delete" Command="ApplicationCommands.Delete"
+			<MenuItem Header="删除" Command="ApplicationCommands.Delete"
 					CommandTarget="{Binding Path=PlacementTarget, RelativeSource={RelativeSource AncestorType=ContextMenu}}" />
 		</ContextMenu>
 	</UserControl.ContextMenu>
@@ -45,10 +45,10 @@
 			<ListBox.ItemTemplate>
 				<DataTemplate DataType="BehaviorTree:TreeNodeViewModel">
 					<Canvas MouseDown="ListBoxItem_MouseDown" MouseUp="ListBoxItem_MouseUp" MouseMove="ListBoxItem_MouseMove" >
-						<Rectangle Name="rectNode" Width="{Binding Width}" Height="{Binding Height}" Cursor="Hand" StrokeThickness="4"
-								RadiusX="4" RadiusY="4" Stroke="{StaticResource treeNodeBorderBrush}" Fill="{StaticResource treeNodeFillBrush}"/>
+						<Rectangle Name="rectNode" Width="{Binding Width}" Height="{Binding Height}" Cursor="Hand" StrokeThickness="2"
+								RadiusX="40" RadiusY="40" Stroke="{StaticResource treeNodeBorderBrush}" Fill="{StaticResource treeNodeFillBrush}"/>
 						<Line X1="{Binding ConnectorX1}" Y1="{Binding ConnectorY1}" X2="{Binding ConnectorX2}" Y2="{Binding ConnectorY2}"
-								Stroke="Black" StrokeThickness="2" />
+								Stroke="Black" StrokeThickness="2"  />
 					</Canvas>
 					<DataTemplate.Triggers>
 						<DataTrigger Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ListBoxItem}}, Path=IsSelected}" Value="True">
