行为树编辑器增加功能:1保存配置,2读取配置生成树

--- a/CSharp/App/Modules/Tree/BehaviorTreeView.xaml
+++ b/CSharp/App/Modules/Tree/BehaviorTreeView.xaml
@@ -17,8 +17,10 @@
 	</UserControl.Resources>
 
 	<UserControl.CommandBindings>
-		<CommandBinding Command="ApplicationCommands.New" Executed="MenuNewNode_Executed" />
-		<CommandBinding Command="ApplicationCommands.Delete" Executed="MenuDeleteNode_Executed" />
+		<CommandBinding Command="ApplicationCommands.New" Executed="MenuNode_New" />
+		<CommandBinding Command="ApplicationCommands.Delete" Executed="MenuNode_Delete" />
+		<CommandBinding Command="ApplicationCommands.Save" Executed="MenuNode_Save" />
+		<CommandBinding Command="ApplicationCommands.Open" Executed="MenuNode_Open" />
 	</UserControl.CommandBindings>
 
 	<UserControl.ContextMenu>
@@ -26,6 +28,10 @@
 			<MenuItem Header="新建" Command="ApplicationCommands.New"
 					CommandTarget="{Binding Path=PlacementTarget, RelativeSource={RelativeSource AncestorType=ContextMenu}}" />
 			<MenuItem Header="删除" Command="ApplicationCommands.Delete"
+					CommandTarget="{Binding Path=PlacementTarget, RelativeSource={RelativeSource AncestorType=ContextMenu}}" />
+			<MenuItem Header="保存" Command="ApplicationCommands.Save"
+					CommandTarget="{Binding Path=PlacementTarget, RelativeSource={RelativeSource AncestorType=ContextMenu}}" />
+			<MenuItem Header="打开" Command="ApplicationCommands.Open"
 					CommandTarget="{Binding Path=PlacementTarget, RelativeSource={RelativeSource AncestorType=ContextMenu}}" />
 		</ContextMenu>
 	</UserControl.ContextMenu>
@@ -49,8 +55,7 @@
 							PreviewMouseLeftButtonUp="ListBoxItem_PreviewMouseLeftButtonUp">
 						<Rectangle Name="rectNode" Width="{Binding Width}" Height="{Binding Height}" Cursor="Hand" StrokeThickness="2"
 								RadiusX="40" RadiusY="40" Stroke="{StaticResource treeNodeBorderBrush}" Fill="{StaticResource treeNodeFillBrush}"/>
-						<Label Content="{Binding ParentNum}" Canvas.Left="20" Canvas.Top="5"></Label>
-						<Label Content="{Binding Num}" Canvas.Left="20" Canvas.Top="15"></Label>
+						<Label Content="{Binding Id}" Canvas.Left="20" Canvas.Top="15"></Label>
 						<Line X1="{Binding ConnectorX1}" Y1="{Binding ConnectorY1}" X2="{Binding ConnectorX2}" Y2="{Binding ConnectorY2}"
 								Stroke="Black" StrokeThickness="2"  />
 					</Canvas>
