--- a/CSharp/App/Modules/Tree/NodeDataEditor.xaml
+++ b/CSharp/App/Modules/Tree/NodeDataEditor.xaml
@@ -1,30 +1,31 @@
-﻿<UserControl x:Class="Modules.Tree.NodeDataEditor"
+﻿<UserControl x:Class="Tree.NodeDataEditor"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" Height="217" Width="211">
-	<Grid Margin="0,0,10,10">
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:tree="clr-namespace:Tree"
+             mc:Ignorable="d" Height="198" Width="211" DataContextChanged="OnDataContextChanged">
+	<UserControl.Resources>
+		<tree:ListToStringConverter x:Key="ListToStringConverter"/>
+	</UserControl.Resources>
+	<Grid VerticalAlignment="Stretch">
 		<Grid.RowDefinitions>
-			<RowDefinition/>
-			<RowDefinition/>
-			<RowDefinition/>
-			<RowDefinition/>
-			<RowDefinition/>
+			<RowDefinition Height="*"/>
+			<RowDefinition Height="*"/>
+			<RowDefinition Height="*"/>
+			<RowDefinition Height="4*"/>
 		</Grid.RowDefinitions>
 		<Grid.ColumnDefinitions>
-			<ColumnDefinition/>
-			<ColumnDefinition/>
+			<ColumnDefinition Width="47*"/>
+			<ColumnDefinition Width="154*"/>
 		</Grid.ColumnDefinitions>
-		<Label Content="ID: " Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" HorizontalContentAlignment="Center" VerticalAlignment="Center" VerticalContentAlignment="Stretch" />
-		<Label Content="Type:" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Center" HorizontalContentAlignment="Center" VerticalAlignment="Center" />
-		<Label Content="Name:" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Center" HorizontalContentAlignment="Center" VerticalAlignment="Center" />
-		<Label Content="Args:" Grid.Row="3" Grid.Column="0" HorizontalAlignment="Center" HorizontalContentAlignment="Center" VerticalAlignment="Center" />
-		<Label Content="Comment:" Grid.Row="4" Grid.Column="0" HorizontalAlignment="Center" HorizontalContentAlignment="Center" VerticalAlignment="Center" />
-		<TextBox Grid.Column="1" Grid.Row="0" Margin="10"/>
-		<TextBox Grid.Column="1" Grid.Row="1" Margin="10"/>
-		<TextBox Grid.Column="1" Grid.Row="2" Margin="10"/>
-		<TextBox Grid.Column="1" Grid.Row="3" Margin="10"/>
-		<TextBox Grid.Column="1" Grid.Row="4" Margin="10"/>
+		<Label Content="ID: " Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" HorizontalContentAlignment="Center" VerticalAlignment="Top" VerticalContentAlignment="Stretch" Height="26" Margin="0,0,19,0" Width="28" />
+		<Label Content="类型:" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Center" HorizontalContentAlignment="Center" VerticalAlignment="Top" Height="26" Margin="-2,0,9,0" Width="40" />
+		<Label Content="参数:" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Center" HorizontalContentAlignment="Center" VerticalAlignment="Top" Height="26" Margin="-2,1,9,0" Width="40" />
+		<Label Content="备注:" Grid.Row="3" Grid.Column="0" HorizontalAlignment="Center" HorizontalContentAlignment="Center" VerticalAlignment="Top" Height="26" Margin="0,40,9,0" Width="40" />
+		<TextBox Name="tbId" Grid.Column="1" Grid.Row="0" Margin="2" Text="{Binding Id}" IsReadOnly="True" />
+		<ComboBox Name="cbType" Grid.Column="1" Grid.Row="1" Margin="2" SelectionChanged="CbType_OnSelectionChanged" />
+		<TextBox Name="tbArgs" Grid.Column="1" Grid.Row="2" Margin="2" Text="{Binding Args, Converter={StaticResource ListToStringConverter}}" />
+		<TextBox Name="tbComment" Grid.Column="1" Grid.Row="3" Margin="2" Text="{Binding Comment}" />
 	</Grid>
 </UserControl>
