--- a/CSharp/App/Modules/Tree/NodeDataEditor.xaml
+++ b/CSharp/App/Modules/Tree/NodeDataEditor.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:tree="clr-namespace:Tree"
-             mc:Ignorable="d" Height="198" Width="211" DataContextChanged="OnDataContextChanged">
+             mc:Ignorable="d" Height="220" Width="211" DataContextChanged="OnDataContextChanged">
 	<UserControl.Resources>
 		<tree:ListToStringConverter x:Key="ListToStringConverter"/>
 	</UserControl.Resources>
@@ -14,6 +14,7 @@
 			<RowDefinition Height="*"/>
 			<RowDefinition Height="*"/>
 			<RowDefinition Height="4*"/>
+			<RowDefinition Height="*"/>
 		</Grid.RowDefinitions>
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="47*"/>
@@ -23,9 +24,10 @@
 		<Label Content="类型:" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Center" HorizontalContentAlignment="Center" VerticalAlignment="Top" Height="26" Margin="-2,0,9,0" Width="40" />
 		<Label Content="参数:" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Center" HorizontalContentAlignment="Center" VerticalAlignment="Top" Height="26" Margin="-2,1,9,0" Width="40" />
 		<Label Content="备注:" Grid.Row="3" Grid.Column="0" HorizontalAlignment="Center" HorizontalContentAlignment="Center" VerticalAlignment="Top" Height="26" Margin="0,40,9,0" Width="40" />
-		<TextBox Name="tbId" Grid.Column="1" Grid.Row="0" Margin="2" Text="{Binding Id}" IsReadOnly="True" />
+		<Label Name="lblId" Grid.Column="1" Grid.Row="0" Margin="2" Content="{Binding Id}" />
 		<ComboBox Name="cbType" Grid.Column="1" Grid.Row="1" Margin="2" SelectionChanged="CbType_OnSelectionChanged" />
 		<TextBox Name="tbArgs" Grid.Column="1" Grid.Row="2" Margin="2" Text="{Binding Args, Converter={StaticResource ListToStringConverter}}" />
 		<TextBox Name="tbComment" Grid.Column="1" Grid.Row="3" Margin="2" Text="{Binding Comment}" />
+		<Button Content="OK" Grid.Row="4" Grid.Column="1" Margin="1,1,40,1"></Button>
 	</Grid>
 </UserControl>
