--- a/CSharp/App/Modules/Tree/AllTreeView.xaml
+++ b/CSharp/App/Modules/Tree/AllTreeView.xaml
@@ -13,6 +13,7 @@
 		<MenuItem Header="File">
 			<MenuItem Header="打开" Click="MenuItem_Open" />
 			<MenuItem Header="保存" Click="MenuItem_Save" />
+			<MenuItem Header="新建" Click="MenuItem_New" />
 		</MenuItem>
 	</Menu>
 	<Grid>
@@ -26,7 +27,7 @@
 			<ColumnDefinition />
 		</Grid.ColumnDefinitions>
 		<GroupBox Grid.Row="0" Grid.Column="0" Header="行为树列表:">
-			<ListBox Name="lbTreeId" ></ListBox>
+			<ListBox Name="lbTreeId" ItemsSource="{Binding TreeList}" ></ListBox>
 		</GroupBox>
 		<GroupBox Grid.Row="1" Grid.Column="0" Header="节点编辑:">
 			<Tree:NodeDataEditor x:Name="nodeDataEditor" VerticalAlignment="Top" />
