--- a/CSharp/App/Modules/Tree/AllTreeView.xaml
+++ b/CSharp/App/Modules/Tree/AllTreeView.xaml
@@ -17,12 +17,12 @@
 	</Menu>
 	<Grid>
 		<Grid.RowDefinitions>
-			<RowDefinition></RowDefinition>
-			<RowDefinition></RowDefinition>
+			<RowDefinition/>
+			<RowDefinition/>
 		</Grid.RowDefinitions>
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="230"/>
-			<ColumnDefinition Width="Auto"></ColumnDefinition>
+			<ColumnDefinition Width="Auto"/>
 			<ColumnDefinition />
 		</Grid.ColumnDefinitions>
 		<GroupBox Grid.Row="0" Grid.Column="0" Header="行为树列表:">
@@ -37,8 +37,8 @@
 					<DataTemplate DataType="Tree:TreeNodeViewModel">
 						<StackPanel MouseLeftButtonDown="ListBoxItem_OnMouseLeftButtonDown" MouseLeftButtonUp="ListBoxItem_OnMouseLeftButtonUp" 
 									Orientation="Horizontal" Margin="1,0">
-							<Label Content="{Binding TreeId}" VerticalAlignment="Stretch" Width="20" ></Label>
-							<Label Content="{Binding Comment}" VerticalAlignment="Stretch" Width="150"></Label>
+							<Label Content="{Binding TreeId}" VerticalAlignment="Stretch" Width="20"/>
+							<Label Content="{Binding Comment}" VerticalAlignment="Stretch" Width="150"/>
 						</StackPanel>
 					</DataTemplate>
 				</ListBox.ItemTemplate>
