--- a/CSharp/App/Modules/BehaviorTreeModule/AllTreeView.xaml
+++ b/CSharp/App/Modules/BehaviorTreeModule/AllTreeView.xaml
@@ -2,8 +2,8 @@
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-		xmlns:Tree="clr-namespace:Modules.Tree"
-		x:Class="Modules.Tree.AllTreeView"
+		xmlns:Tree="clr-namespace:Modules.BehaviorTreeModule"
+		x:Class="Modules.BehaviorTreeModule.AllTreeView"
 		mc:Ignorable="d" 
 		d:DesignHeight="800" 
 		d:DesignWidth="1280" 
