--- a/CSharp/App/Modules/BehaviorTreeModule/AllTreeView.xaml
+++ b/CSharp/App/Modules/BehaviorTreeModule/AllTreeView.xaml
@@ -19,8 +19,8 @@
 			<ColumnDefinition Width="Auto"/>
 			<ColumnDefinition />
 		</Grid.ColumnDefinitions>
-		<GroupBox Grid.Row="0" Grid.Column="0" Header="行为树列表:">
-			<ListBox Name="lbTreeRoots" ItemsSource="{Binding RootList}" VerticalAlignment="Stretch" >
+		<GroupBox Grid.Row="0" Grid.Column="0" Header="行为树列表:" Margin="0,0,0,289" Grid.RowSpan="2">
+			<ListBox Name="lbTreeRoots" ItemsSource="{Binding RootList}" >
 				<ListBox.ContextMenu>
 					<ContextMenu>
 						<MenuItem Header="打开" Click="MenuItem_Open" />
@@ -41,7 +41,7 @@
 				</ListBox.ItemTemplate>
 			</ListBox>
 		</GroupBox>
-		<GroupBox Grid.Row="1" Grid.Column="0" Header="节点编辑:">
+		<GroupBox Grid.Row="1" Grid.Column="0" Header="节点编辑:" Margin="0,116,0,0">
 			<Tree:NodeDataEditor x:Name="nodeDataEditor" VerticalAlignment="Top" />
 		</GroupBox>
 		<GridSplitter Grid.Column="1" Grid.Row="0" Grid.RowSpan="2" Width="3" ShowsPreview="False" VerticalAlignment="Stretch"
